--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -4,7 +4,7 @@
 
 window {
     color: #343436;
-    font-family: "Iosevka";
+    font-family: "azukifontB";
 }
 
 button:hover {
@@ -73,7 +73,7 @@ button:hover {
 }
 
 .song-title {
-    font-family: "Iosevka", "Regular";
+    font-family: "azukifontB", "Semibold";
     font-size: 22px;
     font-weight: bold;
 
